# TuringsNightmare

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-LICENSES  TN_Explanation.md
include/: TuringsNightmare.h  TuringsNightmareCL.h  keccak.h  utility.h
include/cpu/: TuringsNightmareCPU.h
include/cuda/: TuringsNightmareCUDA.h
include/misc/: StringTools.h
include/opencl/: TuringsNightmareCL.h
src/: StringTools.cpp  TuringsNightmare.cpp  TuringsNightmareCL.cl  TuringsNightmareCL.cpp  keccak.c  test.cpp
src/cpu/: TuringsNightmareCPU.cpp
src/crypto/: blake256.c  groestl.c  jh.c  keccak.c
src/cuda/: TuringsNightmareCUDA.cu
src/misc/: StringTools.cpp
src/opencl/: TuringsNightmareCL.cpp
